Added content to index, catering, and contact pages. Added some basic JavaScript for a form as well.

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
 .banner{
-    height: 40vh;
+
     padding: 0;
 }
 
 .container-fluid-s{
- margin: 0 15%;
+    margin: 0 15%;
 }
 
 body{
-background-color: white;
+    background-color: white;
 }
 
 .navbar{
     background-color: #FFE8B9;
+}
+
+.navDropDown{
+    background-color: #f7d797;
 }
 
 footer{
@@ -26,7 +30,7 @@ footer a{
     padding-right: 2%;
 }
 
-.pseudoRelative{
+.relativePosTitle{
     position: relative;
     padding: 0;
     width: 100%;
@@ -50,4 +54,26 @@ footer a{
     opacity: 1;
     margin: 0;
     padding: 0;
+}
+
+.pageContent{
+    font-size: 20px;
+    padding-top: 5vh;
+}
+
+#loyaltyCard{
+    width: 20vw;
+
+}
+
+.lastItem{
+    margin-bottom: 7vh;
+}
+
+.error{
+    color: red;
+}
+
+.success{
+    color:  limegreen;
 }
