--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,14 @@ footer a{
     height: 0;
 }
 
-.titleBanner{
+.titleBackground{
     height: 14vh;
     background-color: black;
     position: absolute;
     bottom: 0;
     opacity: 0.5;
     padding: 0;
+    margin: 0;
 }
 
 .title{
