--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,27 @@
 .banner{
-
     padding: 0;
-}
-
-.container-fluid-s{
-    margin: 0 15%;
 }
 
 body{
     background-color: white;
+    margin-bottom: 7vh;
 }
-
 .navbar{
     background-color: #FFE8B9;
 }
-
-.navDropDown{
+.nav-dropdown{
     background-color: #f7d797;
 }
-
-footer{
-    background-color: #FFE8B9;
-    
+.dropdown-active{
+    background-color:#e0b765;
 }
-
-footer a{
-    color: black;
-    text-decoration: none;
-    padding-right: 2%;
-}
-
-.relativePosTitle{
+.relative-absolute-position{
     position: relative;
     padding: 0;
     width: 100%;
     height: 0;
 }
-
-.titleBackground{
+.title-background{
     height: 14vh;
     background-color: black;
     position: absolute;
@@ -46,7 +30,6 @@ footer a{
     padding: 0;
     margin: 0;
 }
-
 .title{
     position: relative;
     bottom: 10vh;
@@ -56,25 +39,40 @@ footer a{
     margin: 0;
     padding: 0;
 }
-
-.pageContent{
+.page-content{
     font-size: 20px;
     padding-top: 5vh;
+    margin-left: 5%;
+    margin-right: 5%;
 }
-
-#loyaltyCard{
-    width: 20vw;
-
+#loyalty-card{
+    width: 27%;
 }
-
-.lastItem{
-    margin-bottom: 7vh;
+#menu-cards{
+    text-align: center;
 }
-
+.card{
+    margin-top: 3%;
+    background-color: #FFE8B9;
+    margin-left: auto;
+    margin-right: auto;
+    width: 18rem;
+}
+.card a{
+    text-decoration: none;
+    color: black;
+}
+footer{
+    background-color: #FFE8B9;
+}
+footer a{
+    color: black;
+    text-decoration: none;
+    padding-right: 2%;
+}
 .error{
     color: red;
 }
-
 .success{
     color:  limegreen;
 }
