Added to the breakfast menu

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,7 @@
     padding: 0;
 }
 body{
-    background-color: white;
-    margin-bottom: 7vh;
+    margin-bottom: 8vh;
 }
 .navbar{
     background-color: #FFE8B9;
@@ -39,10 +38,10 @@ body{
     padding: 0;
 }
 .page-content{
-    font-size: 20px;
+    font-size: 18px;
     padding-top: 5vh;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 #loyalty-card{
     width: 27%;
@@ -69,9 +68,6 @@ footer a{
     text-decoration: none;
     padding-right: 2%;
 }
-.error{
-    color: red;
-}
-.success{
-    color:  limegreen;
+.menu-items{
+    margin-left: 26%;
 }
