--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     padding: 0;
 }
 body{
-    margin-bottom: 8vh;
+    margin-bottom: 75px;
 }
 .navbar{
     background-color: #FFE8B9;
@@ -10,36 +10,29 @@ body{
 .nav-dropdown{
     background-color: #f7d797;
 }
-.dropdown-active{
-    background-color:#e0b765;
+.nav-dropdown a:hover{
+    background-color: #FFE8B9;
 }
-.relative-absolute-position{
-    position: relative;
-    padding: 0;
-    width: 100%;
-    height: 0;
+.nav-dropdown a:focus{
+    background-color: #FFE8B9;
 }
-.title-background{
-    height: 14vh;
-    background-color: black;
-    position: absolute;
-    bottom: 0;
-    opacity: 0.5;
-    padding: 0;
-    margin: 0;
+.nav-dropdown a:active{
+    background-color: #e0b765;
+    color: black;
+}
+.dropdown-current-page{
+    background-color: #e0b765;
 }
 .title{
-    position: relative;
-    bottom: 10vh;
     text-align: center;
-    color: white;
-    opacity: 1;
+    background-color: #ffde9b;
+    padding: 2vh 0;
+    width: 100%;
     margin: 0;
-    padding: 0;
 }
 .page-content{
     font-size: 18px;
-    padding-top: 5vh;
+    padding-top: 4%;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -60,14 +53,27 @@ body{
     text-decoration: none;
     color: black;
 }
+.menu-items{
+    margin-top: 3%;
+    text-align: center;
+}
+.menu-title{
+    padding-top: 12%;
+    text-decoration: underline;
+}
+.menu-info{
+    margin-top: 4%;
+    text-align: right;
+    font-size: 18px;
+}
 footer{
     background-color: #FFE8B9;
+}
+.footer-content{
+margin-left: 2%;
 }
 footer a{
     color: black;
     text-decoration: none;
     padding-right: 2%;
-}
-.menu-items{
-    margin-left: 26%;
 }
