Got all the main code for dark mode to work. All that needs to be done now is switching to the dark mode classes, which I will create soon

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@ body{
 .navbar{
     background-color: #FFE8B9;
 }
+.navbar-content{
+    margin-left: 1%;
+    margin-right: 1%;
+}
 .nav-dropdown{
     background-color: #f7d797;
 }
