--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-.banner{
-    padding: 0;
-}
-body{
-    margin-bottom: 75px;
-}
 .navbar{
     background-color: #FFE8B9;
 }
@@ -24,6 +18,9 @@ body{
     background-color: #e0b765;
     color: black;
 }
+.nav-dark{
+    background-color: #212529;
+}
 .dropdown-current-page{
     background-color: #e0b765;
 }
@@ -34,11 +31,23 @@ body{
     width: 100%;
     margin: 0;
 }
+.title-dark{
+    background-color: #1c1e20;
+    color: white;
+    padding: 2vh 0;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+}
 .page-content{
     font-size: 18px;
     padding-top: 4%;
     margin-left: 10%;
     margin-right: 10%;
+}
+.content-dark{
+    background-color: #292c30;
+    color: white;
 }
 #loyalty-card{
     width: 27%;
@@ -70,14 +79,27 @@ body{
     text-align: right;
     font-size: 18px;
 }
+#footer-spacing{
+    height: 75px;
+}
+.footer-spacing-dark{
+    background-color: #292c30;
+}
 footer{
     background-color: #FFE8B9;
 }
 .footer-content{
-margin-left: 2%;
+    margin-left: 2%;
 }
 footer a{
     color: black;
     text-decoration: none;
     padding-right: 2%;
+}
+.footer-dark{
+    background-color: #212529;
+    color: white;
+}
+.footer-dark a{
+    color: white;
 }
