--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,30 @@
     background-color: #e0b765;
     color: black;
 }
-.nav-dark{
-    background-color: #212529;
-}
 .dropdown-current-page{
     background-color: #e0b765;
+}
+.nav-dropdown-dark{
+    background-color: #232629;
+}
+.nav-dropdown-dark a{
+    color: white;
+}
+.nav-dropdown-dark a:hover{
+    background-color: #32363b;
+    color: white;
+}
+.nav-dropdown-dark a:focus{
+    background-color: #32363b;
+    color: white;
+}
+.nav-dropdown-dark a:active{
+    background-color: #17191b;
+    color: white;
+}
+.dropdown-current-page-dark{
+    background-color: #17191b;
+    color: white;
 }
 .title{
     text-align: center;
@@ -40,6 +59,8 @@
     text-align: center;
 }
 .page-content{
+    background-color: white;
+    color: black;
     font-size: 18px;
     padding-top: 4%;
     margin-left: 10%;
@@ -51,6 +72,8 @@
 }
 #loyalty-card{
     width: 27%;
+    margin-left: auto;
+    margin-right: auto;
 }
 #menu-cards{
     text-align: center;
@@ -65,6 +88,13 @@
 .card a{
     text-decoration: none;
     color: black;
+}
+.card-dark{
+    border-color: #1c1e20;
+}
+.card-dark a{
+    background-color: #212529;
+    color: white;
 }
 .menu-items{
     margin-top: 3%;
