--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@
     padding-top: 4%;
     margin-left: 10%;
     margin-right: 10%;
+    text-align: center;
 }
 .content-dark{
     background-color: #292c30;
@@ -67,8 +68,6 @@
 }
 #loyalty-card{
     width: 27%;
-    margin-left: auto;
-    margin-right: auto;
 }
 #menu-cards{
     text-align: center;
