--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,17 @@
     text-align: right;
     font-size: 18px;
 }
+.form-position{
+    position: relative;
+    width:100%;
+    height:35em;
+}
+.form-position form{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 #footer-spacing{
     height: 75px;
 }
