--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body{
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 7vh;
+}
 .navbar{
     background-color: #FFE8B9;
 }
@@ -122,6 +127,9 @@
     background-color: #292c30;
 }
 footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     background-color: #FFE8B9;
 }
 .footer-content{
