--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     min-height: 100vh;
     position: relative;
-    padding-bottom: 10vh;
+    padding-bottom: 10em;
 }
 .navbar{
     background-color: #FFE8B9;
@@ -109,16 +109,8 @@ body{
     text-align: right;
     font-size: 18px;
 }
-.form-position{
-    position: relative;
-    width:100%;
-    height:35em;
-}
-.form-position form{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.form-area{
+    text-align: center;
 }
 #footer-spacing{
     height: 75px;
