--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ body{
     color: white;
 }
 #loyalty-card{
-    width: 27%;
+    max-height: 30vh;
+    max-width: 100%;
 }
 #menu-cards{
     text-align: center;
