Slight wording changes to the successful form submit text and created a class for it instead of using inline CSS.

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,9 @@ body{
 .form-inputs{
     max-width: 100%;
 }
+.form-submitted{
+    color: limegreen;
+}
 #footer-spacing{
     height: 75px;
 }
