--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ body{
     background-color: #FFE8B9;
 }
 .nav-dropdown a:active{
-    background-color: #e0b765;
+    background-color: #ecc16a;
     color: black;
 }
 .dropdown-current-page{
-    background-color: #e0b765;
+    background-color: #ecc16a;
 }
 .nav-dropdown-dark{
     background-color: #212529;
